# nix-inspect

./: .clangd  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crates.nix  flake.nix  result
src/: key_handler.rs  logging.rs  main.rs  model.rs  tui.rs  update.rs  view.rs  workers.rs
worker/: .clang-format  inspector.cc  inspector.hh  main.cc  meson.build
