[package]
name = "nix-inspect"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"
ratatui = { version = "0.25.0", features = ["all-widgets"] }
parking_lot = "0.12.1"
kanal = "0.1.0-pre8"
color-eyre = "0.6.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
directories = "5.0.1"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.28.0", features = ["hostname"] }
ansi-to-tui = "4.0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
